gitops/apps/infra/pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-web
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: pihole.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-pihole-web
            port:
              number: 81
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-web-https
  namespace: pihole
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: pihole.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-pihole-web
            port:
              number: 81
  tls:
  - hosts:
    - pihole.local
    secretName: pihole-tls
